--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,15 @@
 <div class="footer">
-  <p jhiTranslate="footer">This is your footer</p>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img style="height: 2em" src="https://portal.form.io/images/formio-logo.png" /></a>
+      <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item" routerLinkActive="active" *ngIf="!auth.authenticated">
+          <a class="nav-link" routerLink="auth">Login | Register</a>
+        </li>
+        <li class="nav-item" *ngIf="auth.authenticated">
+          <a class="nav-link" routerLink="/" (click)="auth.logout()"><span class="glyphicon glyphicon-off"></span> Logout</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </div>
